// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render BankCardPreview with bank name 1`] = `
<DocumentFragment>
  <section
    class="bankCardPreview"
  >
    <div
      class="bankName"
    >
      <strong>
        Testbank
      </strong>
    </div>
    AT483200000012345864
    <br />
    GIBAATWGXXX
  </section>
</DocumentFragment>
`;

exports[`Render BankCardPreview without bank name 1`] = `
<DocumentFragment>
  <section
    class="bankCardPreview"
  >
    <div
      class="bankName"
    >
      <strong>
         
      </strong>
    </div>
    AT483200000012345864
    <br />
    GIBAATWGXXX
  </section>
</DocumentFragment>
`;
